--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@pinia/nuxt": "^0.4.7",
     "@vicons/ionicons5": "^0.12.0",
     "@vicons/material": "^0.12.0",
+    "@vicons/tabler": "^0.12.0",
     "axios": "^1.3.4",
+    "eslint": "^8.36.0",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
     "nuxt": "^3.3.1",
+    "typescript": "^5.0.2",
     "vue": "^3.2.47"
   }
 }
