--- a/package.json
+++ b/package.json
@@ -9,17 +9,19 @@
   },
   "devDependencies": {
     "@huntersofbook/naive-ui-nuxt": "^0.7.1",
+    "@jridgewell/sourcemap-codec": "^1.4.15",
+    "@npmcli/fs": "^3.1.0",
     "@nuxt/devtools": "^0.2.5",
-    "@pinia/nuxt": "^0.4.7",
+    "@pinia/nuxt": "^0.4.8",
     "@vicons/ionicons5": "^0.12.0",
     "@vicons/material": "^0.12.0",
     "@vicons/tabler": "^0.12.0",
-    "axios": "^1.3.4",
-    "eslint": "^8.36.0",
+    "axios": "^1.3.5",
+    "consola": "^3.0.1",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
-    "nuxt": "^3.3.1",
-    "typescript": "^5.0.2",
+    "nuxt": "^3.4.0",
+    "typescript": "^5.0.4",
     "vue": "^3.2.47"
   }
 }
