--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
     "@jridgewell/sourcemap-codec": "^1.4.15",
     "@npmcli/fs": "^3.1.0",
     "@nuxt/devtools": "^0.2.5",
-    "@pinia/nuxt": "^0.4.8",
+    "@pinia/nuxt": "^0.4.9",
     "@vicons/ionicons5": "^0.12.0",
     "@vicons/material": "^0.12.0",
     "@vicons/tabler": "^0.12.0",
-    "axios": "^1.3.5",
-    "consola": "^3.0.1",
+    "axios": "^1.3.6",
+    "consola": "^3.1.0",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
-    "nuxt": "^3.4.0",
+    "nuxt": "^3.4.2",
+    "timeago.js": "^4.0.2",
     "typescript": "^5.0.4",
     "vue": "^3.2.47"
   }
