--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@huntersofbook/naive-ui-nuxt": "^0.7.1",
     "@jridgewell/sourcemap-codec": "^1.4.15",
     "@npmcli/fs": "^3.1.0",
+    "@nuxt/devtools": "^0.4.2",
     "@pinia/nuxt": "^0.4.9",
     "@vicons/ionicons5": "^0.12.0",
     "@vicons/material": "^0.12.0",
